--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -1,8 +1,14 @@
 .btn {
   border-radius: 20px;
-  font-size: 1.2rem;
+  font-size: 16px;
   color: white;
-  background: #016b6b;
+  background: #fc6011;
   border: none;
-  padding: 10px 20px;
+  padding: 15px 20px;
+}
+
+.btn-border {
+  color: #fc6011;
+  background: white;
+  border: 1px solid #fc6011;
 }
