--- a/src/components/card/card-italian.html
+++ b/src/components/card/card-italian.html
@@ -1,1 +1,8 @@
-1
+<figure class="card">
+  <img
+    class="card-image"
+    src="https://images.unsplash.com/photo-1585238342024-78d387f4a707?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=150&q=80"
+    alt=""
+  />
+  <figcaption class="card-text">Italian</figcaption>
+</figure>
