--- a/src/components/card/card-sri-lankan.html
+++ b/src/components/card/card-sri-lankan.html
@@ -1,1 +1,8 @@
-3
+<figure class="card">
+  <img
+    class="card-image"
+    src="https://images.unsplash.com/photo-1516714435131-44d6b64dc6a2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=150&q=80"
+    alt=""
+  />
+  <figcaption class="card-text">Sri Lankan</figcaption>
+</figure>
