--- a/src/components/card/card-offers.html
+++ b/src/components/card/card-offers.html
@@ -1,1 +1,8 @@
-2
+<div class="card">
+  <img
+    class="card-image"
+    src="https://images.unsplash.com/photo-1597169219919-db4759c36803?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=800&q=80"
+    alt=""
+  />
+  <p class="card-text">Offers</p>
+</div>
