--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,14 +1,12 @@
 .card {
-  width: 100px;
-  height: 100px;
   display: flex;
   flex-direction: column;
 }
 
 .card-image {
   border-radius: 20px;
-  height: 100%;
-  width: 100%;
+  width: 100px;
+  height: 100px;
   object-fit: cover;
 }
 
@@ -16,4 +14,8 @@
   color: #4a4b4d;
   font-weight: bold;
   text-align: center;
+}
+
+.card-container {
+  display: grid;
 }
