🐛 Fix padding of root element

--- a/src/global.css
+++ b/src/global.css
@@ -1,9 +1,13 @@
-@import url('https://fonts.googleapis.com/css2?family=Quicksand&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
 
 *,
 *::after,
 *::before {
   box-sizing: border-box;
+}
+
+#root {
+  padding: 0 !important;
 }
 
 html {
