--- a/src/components/card/card-container.html
+++ b/src/components/card/card-container.html
@@ -6,7 +6,7 @@
       src="https://images.unsplash.com/photo-1585238342024-78d387f4a707?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=200&q=80"
       alt=""
     />
-    <p class="card-text">Italian</p>
+    <figcaption class="card-text">Italian</figcaption>
   </figure>
 
   <!-- card-offers.html -->
@@ -20,6 +20,54 @@
   </figure>
 
   <!-- card-sri-lankan.html -->
+  <figure class="card">
+    <img
+      class="card-image"
+      src="https://images.unsplash.com/photo-1516714435131-44d6b64dc6a2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=150&q=80"
+      alt=""
+    />
+    <figcaption class="card-text">Sri Lankan</figcaption>
+  </figure>
+  <figure class="card">
+    <img
+      class="card-image"
+      src="https://images.unsplash.com/photo-1516714435131-44d6b64dc6a2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=150&q=80"
+      alt=""
+    />
+    <figcaption class="card-text">Sri Lankan</figcaption>
+  </figure>
+  <figure class="card">
+    <img
+      class="card-image"
+      src="https://images.unsplash.com/photo-1516714435131-44d6b64dc6a2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=150&q=80"
+      alt=""
+    />
+    <figcaption class="card-text">Sri Lankan</figcaption>
+  </figure>
+  <figure class="card">
+    <img
+      class="card-image"
+      src="https://images.unsplash.com/photo-1516714435131-44d6b64dc6a2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=150&q=80"
+      alt=""
+    />
+    <figcaption class="card-text">Sri Lankan</figcaption>
+  </figure>
+  <figure class="card">
+    <img
+      class="card-image"
+      src="https://images.unsplash.com/photo-1516714435131-44d6b64dc6a2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=150&q=80"
+      alt=""
+    />
+    <figcaption class="card-text">Sri Lankan</figcaption>
+  </figure>
+  <figure class="card">
+    <img
+      class="card-image"
+      src="https://images.unsplash.com/photo-1516714435131-44d6b64dc6a2?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=150&q=80"
+      alt=""
+    />
+    <figcaption class="card-text">Sri Lankan</figcaption>
+  </figure>
   <figure class="card">
     <img
       class="card-image"
