--- a/src/components/card/card.css
+++ b/src/components/card/card.css
@@ -1,6 +1,8 @@
 .card {
   display: flex;
   flex-direction: column;
+  margin: 0;
+  width: 100px;
 }
 
 .card-image {
@@ -14,8 +16,23 @@
   color: #4a4b4d;
   font-weight: bold;
   text-align: center;
+  margin: 3px 0;
 }
 
 .card-container {
   display: grid;
+  grid-auto-flow: column;
+  overflow-x: auto;
+  column-gap: 20px;
+  padding-left: 20px;
+  justify-content: start;
+}
+
+.card-container::after {
+  content: "";
+  width: 1px;
+}
+
+.card-container::-webkit-scrollbar {
+  display: none;
 }
