--- a/src/pages/welcome/welcome.css
+++ b/src/pages/welcome/welcome.css
@@ -1,15 +1,41 @@
-.welcome {
+/* Flex solution */
+/* .welcome {
+  background-image: url("../../assets/background.svg");
   height: 100vh;
   width: 100vw;
-  background-color: #1fc8db;
-  background-image: linear-gradient(
-    141deg,
-    #9fb8ad 0%,
-    #1fc8db 51%,
-    #2cb5e8 75%
-  );
   display: flex;
   flex-direction: column;
-  align-items: center;
   justify-content: center;
+  align-items: center;
+}
+
+.color-primary {
+  color: #fc6011;
+}
+
+.welcome > * {
+  margin: 0;
+}
+
+.welcome > *:not(:last-child) {
+  margin-bottom: 6px;
+} */
+
+/* Grid solution */
+.welcome {
+  background-image: url("../../assets/background.svg");
+  height: 100vh;
+  width: 100vw;
+  display: grid;
+  place-items: center;
+  align-content: center;
+  grid-row-gap: 6px;
+}
+
+.color-primary {
+  color: #fc6011;
+}
+
+.welcome > * {
+  margin: 0;
 }
