✨ Add color variables

--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -1,11 +1,11 @@
 .input {
   border-radius: 20px;
   font-size: 1.2rem;
-  color: black;
-  background: #f2f2f2;
+  color: var(--primary-font-color);
+  background: var(--input-background-color);
   border: none;
   padding: 10px 20px;
 }
 .input::placeholder {
-  color: #b6b7b7;
+  color: var(--placeholder-color);
 }
