--- a/src/components/button/button.css
+++ b/src/components/button/button.css
@@ -2,13 +2,13 @@
   border-radius: 20px;
   font-size: 16px;
   color: white;
-  background: #fc6011;
+  background: var(--main-color);
   border: none;
   padding: 15px 20px;
 }
 
 .btn-border {
-  color: #fc6011;
+  color: var(--main-color);
   background: white;
-  border: 1px solid #fc6011;
+  border: 1px solid var(--main-color);
 }
