Add verify form

--- a/src/components/form/form.css
+++ b/src/components/form/form.css
@@ -7,3 +7,20 @@
 .form .input {
   margin-top: 2em;
 }
+
+.form__hint a {
+  margin-left: 0.5em;
+}
+
+.form__otp {
+  display: grid;
+  grid-auto-flow: column;
+  justify-content: center;
+  grid-column-gap: 1.2em;
+}
+
+.form__otp input {
+  padding: 10px;
+  width: 2.8rem;
+  border-radius: 10px;
+}
